--- a/src/Views/Popups/Configure.xaml
+++ b/src/Views/Popups/Configure.xaml
@@ -23,34 +23,34 @@
         <TextBlock
             Grid.Row="0" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.Configure.User}"
+            Text="{DynamicResource Text.Configure.User}"
             HorizontalAlignment="Right"/>
         <controls:TextEdit
             Grid.Row="0" Grid.Column="1"
             Text="{Binding ElementName=me, Path=UserName, Mode=TwoWay}"
             Height="24"
-            Placeholder="{StaticResource Text.Configure.User.Placeholder}"/>
+            Placeholder="{DynamicResource Text.Configure.User.Placeholder}"/>
 
         <TextBlock
             Grid.Row="1" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.Configure.Email}"
+            Text="{DynamicResource Text.Configure.Email}"
             HorizontalAlignment="Right"/>
         <controls:TextEdit
             Grid.Row="1" Grid.Column="1"
             Text="{Binding ElementName=me, Path=UserEmail, Mode=TwoWay}"
             Height="24"
-            Placeholder="{StaticResource Text.Configure.Email.Placeholder}"/>
+            Placeholder="{DynamicResource Text.Configure.Email.Placeholder}"/>
 
         <TextBlock
             Grid.Row="2" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.Configure.Proxy}"
+            Text="{DynamicResource Text.Configure.Proxy}"
             HorizontalAlignment="Right"/>
         <controls:TextEdit
             Grid.Row="2" Grid.Column="1"
             Text="{Binding ElementName=me, Path=Proxy, Mode=TwoWay}"
             Height="24"
-            Placeholder="{StaticResource Text.Configure.Proxy.Placeholder}"/>
+            Placeholder="{DynamicResource Text.Configure.Proxy.Placeholder}"/>
     </Grid>
 </controls:PopupWidget>
