--- a/src/Views/Popups/AddSubTree.xaml
+++ b/src/Views/Popups/AddSubTree.xaml
@@ -25,7 +25,7 @@
         <TextBlock
             Grid.Row="0" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.AddSubTree.Source}"
+            Text="{DynamicResource Text.AddSubTree.Source}"
             HorizontalAlignment="Right"/>
         <controls:TextEdit 
             Grid.Row="0" Grid.Column="1"
@@ -43,7 +43,7 @@
         <TextBlock
             Grid.Row="1" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.AddSubTree.Branch}"
+            Text="{DynamicResource Text.AddSubTree.Branch}"
             HorizontalAlignment="Right"/>
         <controls:TextEdit 
             Grid.Row="1" Grid.Column="1"
@@ -61,7 +61,7 @@
         <TextBlock
             Grid.Row="2" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.AddSubTree.Prefix}"
+            Text="{DynamicResource Text.AddSubTree.Prefix}"
             HorizontalAlignment="Right"/>
         <controls:TextEdit 
             Grid.Row="2" Grid.Column="1"
@@ -81,6 +81,6 @@
             Margin="0,4,0,0"
             x:Name="chkSquash"
             IsChecked="True"
-            Content="{StaticResource Text.AddSubTree.Squash}"/>
+            Content="{DynamicResource Text.AddSubTree.Squash}"/>
     </Grid>
 </controls:PopupWidget>
