--- a/src/Views/Popups/DeleteBranch.xaml
+++ b/src/Views/Popups/DeleteBranch.xaml
@@ -20,7 +20,7 @@
         <TextBlock
             Grid.Row="0" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.DeleteBranch.Branch}"
+            Text="{DynamicResource Text.DeleteBranch.Branch}"
             HorizontalAlignment="Right"/>
         <StackPanel
             Grid.Row="0" Grid.Column="1"
