--- a/src/Views/Popups/DeleteSubmodule.xaml
+++ b/src/Views/Popups/DeleteSubmodule.xaml
@@ -20,7 +20,7 @@
         <TextBlock
             Grid.Row="0" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.DeleteSubmodule.Path}"
+            Text="{DynamicResource Text.DeleteSubmodule.Path}"
             HorizontalAlignment="Right"/>
         <StackPanel
             Grid.Row="0" Grid.Column="1"
