--- a/src/Views/Popups/PushTag.xaml
+++ b/src/Views/Popups/PushTag.xaml
@@ -21,7 +21,7 @@
         <TextBlock
             Grid.Row="0" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.PushTag.Tag}"
+            Text="{DynamicResource Text.PushTag.Tag}"
             HorizontalAlignment="Right"/>
         <StackPanel
             Grid.Row="0" Grid.Column="1"
@@ -34,7 +34,7 @@
         <TextBlock
             Grid.Row="1" Grid.Column="0"
             Margin="0,0,8,0"
-            Text="{StaticResource Text.PushTag.Remote}"
+            Text="{DynamicResource Text.PushTag.Remote}"
             HorizontalAlignment="Right"/>
         <ComboBox
             Grid.Row="1" Grid.Column="1"
