--- a/src/Views/Widgets/RevisionFiles.xaml
+++ b/src/Views/Widgets/RevisionFiles.xaml
@@ -21,7 +21,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Border Grid.Column="0" Background="{StaticResource Brush.Contents}" BorderBrush="{StaticResource Brush.Border2}" BorderThickness="1">
+        <Border Grid.Column="0" Background="{DynamicResource Brush.Contents}" BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="1">
             <controls:Tree 
                 x:Name="treeFiles" 
                 FontFamily="Consolas" 
@@ -61,7 +61,7 @@
 
         <GridSplitter Grid.Column="1" Width="1" HorizontalAlignment="Center" VerticalAlignment="Stretch" Background="Transparent"/>
 
-        <Border Grid.Column="2" BorderBrush="{StaticResource Brush.Border2}" BorderThickness="1" Margin="2,0">
+        <Border Grid.Column="2" BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="1" Margin="2,0">
             <Grid>
                 <Grid x:Name="layerTextPreview" Visibility="Collapsed" SizeChanged="OnTextPreviewSizeChanged">
                     <DataGrid
@@ -79,7 +79,7 @@
                         </DataGrid.Columns>
                     </DataGrid>
 
-                    <Rectangle x:Name="txtPreviewSplitter" Width="1" Fill="{StaticResource Brush.Border2}" HorizontalAlignment="Left"/>
+                    <Rectangle x:Name="txtPreviewSplitter" Width="1" Fill="{DynamicResource Brush.Border2}" HorizontalAlignment="Left"/>
                 </Grid>
 
                 <ScrollViewer 
@@ -97,8 +97,8 @@
                     Orientation="Vertical" 
                     VerticalAlignment="Center" HorizontalAlignment="Center" 
                     Visibility="Collapsed">
-                    <Path x:Name="iconRevisionPreview" Width="64" Height="64" Data="{StaticResource Icon.Submodule}" Fill="{StaticResource Brush.FG2}"/>
-                    <TextBlock x:Name="txtRevisionPreview" Margin="0,16,0,0" FontFamily="Consolas" FontSize="18" FontWeight="UltraBold" HorizontalAlignment="Center" Foreground="{StaticResource Brush.FG2}"/>
+                    <Path x:Name="iconRevisionPreview" Width="64" Height="64" Data="{StaticResource Icon.Submodule}" Fill="{DynamicResource Brush.FG2}"/>
+                    <TextBlock x:Name="txtRevisionPreview" Margin="0,16,0,0" FontFamily="Consolas" FontSize="18" FontWeight="UltraBold" HorizontalAlignment="Center" Foreground="{DynamicResource Brush.FG2}"/>
                 </StackPanel>
 
                 <StackPanel 
@@ -106,8 +106,8 @@
                     Orientation="Vertical" 
                     VerticalAlignment="Center" HorizontalAlignment="Center" 
                     Visibility="Collapsed">
-                    <Path Width="64" Height="64" Data="{StaticResource Icon.Error}" Fill="{StaticResource Brush.FG2}"/>
-                    <TextBlock Margin="0,16,0,0" Text="{StaticResource Text.BinaryNotSupported}" FontFamily="Consolas" FontSize="18" FontWeight="UltraBold" HorizontalAlignment="Center" Foreground="{StaticResource Brush.FG2}"/>
+                    <Path Width="64" Height="64" Data="{StaticResource Icon.Error}" Fill="{DynamicResource Brush.FG2}"/>
+                    <TextBlock Margin="0,16,0,0" Text="{DynamicResource Text.BinaryNotSupported}" FontFamily="Consolas" FontSize="18" FontWeight="UltraBold" HorizontalAlignment="Center" Foreground="{DynamicResource Brush.FG2}"/>
                 </StackPanel>
             </Grid>
         </Border>
